--- a/templates/base.html
+++ b/templates/base.html
@@ -109,12 +109,12 @@
       // Refresh engines status only if the user is authenticated
       {% if user.is_authenticated %}
       refresh_engines_status();
-      if({{ PATROWL_REFRESH_ENGINE }}>0){
+      if({{ SECUREFLOW_REFRESH_ENGINE }}>0){
         setInterval(
           function() {
             refresh_engines_status();
           },(
-            {{ PATROWL_REFRESH_ENGINE }} > 5000)?{{ PATROWL_REFRESH_ENGINE }}:5000
+            {{ SECUREFLOW_REFRESH_ENGINE }} > 5000)?{{ SECUREFLOW_REFRESH_ENGINE }}:5000
         );
       }
       {% endif %}
@@ -575,7 +575,7 @@
     <footer class="footer">
       <div class="container-fluid">
         <div class="col-sm-6">
-          <span class="text-muted">PatrOwl Manager 2018-2022 - version: {{ PATROWL_VERSION }}</span>
+          <span class="text-muted">PatrOwl Manager 2018-2022 - version: {{ SECUREFLOW_VERSION }}</span>
           <a href="https://github.com/Patrowl/PatrowlManager"><i class="text-muted fab fa-github fa-lg"></i></a>
           <a href="https://twitter.com/patrowl_io"><i class="text-muted fab fa-twitter fa-lg"></i></a>
           <a href="https://www.linkedin.com/company/patrowl/"><i class="text-muted fab fa-linkedin fa-lg"></i></a>
