--- a/scans/templates/email_send_report.html
+++ b/scans/templates/email_send_report.html
@@ -15,6 +15,6 @@ Hello, A new scan report is available.<br/>
   <li>Info: <span class="classtext" style="color: #3498db; font-weight: bold;">{{findings_stats.info}}</span></li>
 </ul>
 
--- PatrowlManager Notification Center
+-- SecureFlow Notification Center
 See https://patrowl.io
 <br/><br/>
