--- a/settings/templates/support.html
+++ b/settings/templates/support.html
@@ -15,12 +15,12 @@
     <strong>PatrOwl</strong> is a scalable, free and open-source solution for automating and orchestrating Security Operations.
   </p>
   <p>
-    <strong>PatrowlManager</strong> is the Front-end application for managing the assets, reviewing risks on real-time, orchestrating the operations (scans, searches, API calls, ...), aggregating the results, relaying alerts on third parties (ex: Incident Response platform like TheHive, SIEM, ...) and providing the reports and dashboards. <strong> PatrowlEngines</strong> is the engine framework and the supported list of engines performing the operations (scans, searches, API calls, ...) on due time.
+    <strong>SecureFlow</strong> is the Front-end application for managing the assets, reviewing risks on real-time, orchestrating the operations (scans, searches, API calls, ...), aggregating the results, relaying alerts on third parties (ex: Incident Response platform like TheHive, SIEM, ...) and providing the reports and dashboards. <strong> PatrowlEngines</strong> is the engine framework and the supported list of engines performing the operations (scans, searches, API calls, ...) on due time.
   </p>
 
   <h4 class="text-warning">Documentation</h4>
   <p>
-    Official PatrowlManager and PatrowlEngines documentations are available in <a href="https://github.com/Patrowl/PatrowlDocs">PatrowlDocs</a>, including:
+    Official SecureFlow and PatrowlEngines documentations are available in <a href="https://github.com/Patrowl/PatrowlDocs">PatrowlDocs</a>, including:
   </p>
   <ul>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/installation-guide.md">Installation Guide</a></li>
@@ -28,12 +28,12 @@
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/user-guide.md">User Guide</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/useful-commands.md">Useful Commands</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-engines.md">API documentation of PatrowlEngines (OpenApi)</a></li>
-    <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-manager.md">API documentation of PatrowlManager (OpenApi)</a></li>
+    <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-manager.md">API documentation of SecureFlow (OpenApi)</a></li>
   </ul>
 
   <h4 class="text-warning">Support</h4>
   <p>
-    Please open an issue on <a href="https://github.com/Patrowl/PatrowlManager/issues">GitHub</a> if you'd like to report a bug or request a feature. We are also available on <a href="https://gitter.im/Patrowl/Support">Gitter</a> to help you out. If you need to contact the project team, send an email to <a href="mailto:getsupport@patrowl.io?subject=Help">getsupport@patrowl.io</a>.
+    Please open an issue on <a href="https://github.com/Patrowl/SecureFlow/issues">GitHub</a> if you'd like to report a bug or request a feature. We are also available on <a href="https://gitter.im/Patrowl/Support">Gitter</a> to help you out. If you need to contact the project team, send an email to <a href="mailto:getsupport@patrowl.io?subject=Help">getsupport@patrowl.io</a>.
   </p>
 
   <h4 class="text-warning">Security contact</h4>
