--- a/templates/base.html
+++ b/templates/base.html
@@ -576,7 +576,7 @@
       <div class="container-fluid">
         <div class="col-sm-6">
           <span class="text-muted">PatrOwl Manager 2018-2022 - version: {{ SECUREFLOW_VERSION }}</span>
-          <a href="https://github.com/Patrowl/PatrowlManager"><i class="text-muted fab fa-github fa-lg"></i></a>
+          <a href="https://github.com/Patrowl/SecureFlow"><i class="text-muted fab fa-github fa-lg"></i></a>
           <a href="https://twitter.com/patrowl_io"><i class="text-muted fab fa-twitter fa-lg"></i></a>
           <a href="https://www.linkedin.com/company/patrowl/"><i class="text-muted fab fa-linkedin fa-lg"></i></a>
           {% if PRO_EDITION == False %}
