--- a/settings/templates/support.html
+++ b/settings/templates/support.html
@@ -15,19 +15,19 @@
     <strong>PatrOwl</strong> is a scalable, free and open-source solution for automating and orchestrating Security Operations.
   </p>
   <p>
-    <strong>SecureFlow</strong> is the Front-end application for managing the assets, reviewing risks on real-time, orchestrating the operations (scans, searches, API calls, ...), aggregating the results, relaying alerts on third parties (ex: Incident Response platform like TheHive, SIEM, ...) and providing the reports and dashboards. <strong> PatrowlEngines</strong> is the engine framework and the supported list of engines performing the operations (scans, searches, API calls, ...) on due time.
+    <strong>SecureFlow</strong> is the Front-end application for managing the assets, reviewing risks on real-time, orchestrating the operations (scans, searches, API calls, ...), aggregating the results, relaying alerts on third parties (ex: Incident Response platform like TheHive, SIEM, ...) and providing the reports and dashboards. <strong> SecureFlow</strong> is the engine framework and the supported list of engines performing the operations (scans, searches, API calls, ...) on due time.
   </p>
 
   <h4 class="text-warning">Documentation</h4>
   <p>
-    Official SecureFlow and PatrowlEngines documentations are available in <a href="https://github.com/Patrowl/PatrowlDocs">PatrowlDocs</a>, including:
+    Official SecureFlow and SecureFlow documentations are available in <a href="https://github.com/Patrowl/PatrowlDocs">PatrowlDocs</a>, including:
   </p>
   <ul>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/installation-guide.md">Installation Guide</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/update-guide.md">Update Guide</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/user-guide.md">User Guide</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/installation/useful-commands.md">Useful Commands</a></li>
-    <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-engines.md">API documentation of PatrowlEngines (OpenApi)</a></li>
+    <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-engines.md">API documentation of SecureFlow (OpenApi)</a></li>
     <li><a href="https://github.com/Patrowl/PatrowlDocs/blob/master/api/api-secureflow-manager.md">API documentation of SecureFlow (OpenApi)</a></li>
   </ul>
 
